--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Meu Site Incrível</title>
+  <title>Profissão TI - Tecnologia da Informação</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
+
 <body>
   <header class="header">
     <div class="overlay">
       <nav class="navbar">
-        <a href="#" class="logo">Meu Site</a>
+        <a href="#" class="logo">Profissão TI</a>
         <ul class="nav-links">
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#sobre">Sobre a Profissão</a></li>
+          <li><a href="#salario">Média Salarial</a></li>
+          <li><a href="#enem">Nota de Corte ENEM</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
       <div class="hero">
-        <h1>Bem-vindo ao meu Site!</h1>
-        <p>Explore, Aprenda e Conecte-se</p>
+        <h1>Profissão TI - Tecnologia da Informação</h1>
+        <p>Descubra tudo sobre a carreira de TI, o futuro da tecnologia e como entrar nesse campo incrível!</p>
         <a href="#sobre" class="cta-btn">Saiba Mais</a>
       </div>
     </div>
@@ -29,38 +32,56 @@
 
   <section id="sobre" class="section-about">
     <div class="container">
-      <h2>Sobre o Projeto</h2>
-      <p>Este é um exemplo de um site feito para demonstrar como você pode usar HTML e CSS para criar algo bonito e funcional. A ideia é mostrar como aplicar conceitos modernos de design para criar uma experiência visual incrível.</p>
+      <h2>O que é a profissão de TI?</h2>
+      <p>A profissão de Tecnologia da Informação (TI) engloba uma variedade de funções relacionadas ao uso de computadores,
+        software, redes e dados para resolver problemas e melhorar a eficiência das organizações. Os profissionais de TI são
+        responsáveis por desenvolver, implementar, gerenciar e manter sistemas e soluções tecnológicas essenciais para o
+        funcionamento de empresas e instituições.</p>
+      <div class="image-container">
+        <img src="https://via.placeholder.com/800x400.png?text=Profissional+de+TI" alt="Profissional de TI">
+      </div>
     </div>
   </section>
 
-  <section id="servicos" class="section-services">
+  <section id="salario" class="section-salary">
     <div class="container">
-      <h2>Serviços</h2>
-      <div class="service-cards">
-        <div class="service-card">
-          <i class="fas fa-code"></i>
-          <h3>Desenvolvimento Web</h3>
-          <p>Criação de sites personalizados e responsivos para sua empresa ou projeto pessoal.</p>
-        </div>
-        <div class="service-card">
-          <i class="fas fa-paint-brush"></i>
-          <h3>Design Gráfico</h3>
-          <p>Designs criativos para logotipos, banners e materiais gráficos.</p>
-        </div>
-        <div class="service-card">
-          <i class="fas fa-rocket"></i>
-          <h3>Consultoria Digital</h3>
-          <p>Ajudamos a otimizar sua presença online para alcançar mais clientes.</p>
-        </div>
+      <h2>Média Salarial na área de TI</h2>
+      <p>A média salarial de um profissional de TI varia dependendo da sua especialização, experiência e local de trabalho.
+        Aqui estão algumas informações sobre salários médios no Brasil:</p>
+      <ul>
+        <li>Desenvolvedor de Software: R$ 4.500 a R$ 9.000</li>
+        <li>Analista de Sistemas: R$ 3.800 a R$ 7.000</li>
+        <li>Administrador de Redes: R$ 3.000 a R$ 6.000</li>
+        <li>Especialista em Segurança da Informação: R$ 6.000 a R$ 12.000</li>
+        <li>Arquiteto de Soluções: R$ 10.000 a R$ 18.000</li>
+      </ul>
+      <div class="image-container">
+        <img src="https://via.placeholder.com/800x400.png?text=Carreira+TI" alt="Carreira TI">
+      </div>
+    </div>
+  </section>
+
+  <section id="enem" class="section-enem">
+    <div class="container">
+      <h2>Nota de Corte do ENEM para Cursos de TI</h2>
+      <p>A nota de corte do ENEM varia de acordo com a universidade e o curso. Para entrar em cursos de Tecnologia da
+        Informação e áreas relacionadas, a média de corte gira em torno de:</p>
+      <ul>
+        <li>Ciência da Computação: 700 a 800 pontos</li>
+        <li>Engenharia de Computação: 750 a 850 pontos</li>
+        <li>Redes de Computadores: 650 a 700 pontos</li>
+        <li>Sistemas de Informação: 600 a 750 pontos</li>
+      </ul>
+      <div class="image-container">
+        <img src="https://via.placeholder.com/800x400.png?text=Nota+de+Corte+ENEM" alt="Nota de Corte ENEM">
       </div>
     </div>
   </section>
 
   <section id="contato" class="section-contact">
     <div class="container">
-      <h2>Contato</h2>
-      <p>Entre em contato para saber mais sobre nossos serviços ou tirar dúvidas.</p>
+      <h2>Entre em Contato</h2>
+      <p>Tem alguma dúvida ou quer saber mais sobre a profissão de TI? Entre em contato conosco!</p>
       <form action="#" method="POST">
         <input type="text" placeholder="Seu nome" required>
         <input type="email" placeholder="Seu e-mail" required>
@@ -71,7 +92,7 @@
   </section>
 
   <footer class="footer">
-    <p>&copy; 2026 Meu Site. Todos os direitos reservados.</p>
+    <p>&copy; 2026 Profissão TI. Todos os direitos reservados.</p>
     <div class="social-links">
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-twitter"></i></a>
@@ -79,4 +100,5 @@
     </div>
   </footer>
 </body>
+
 </html>
