--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </ul>
       </nav>
       <div class="hero">
-        <h1>Profissão TI - Tecnologia da Informação</h1>
-        <p>Descubra tudo sobre a carreira de TI, o futuro da tecnologia e como entrar nesse campo incrível!</p>
+        <h1>Profissão TI</h1>
+        <p>Explore o mundo da Tecnologia da Informação e descubra tudo sobre essa carreira promissora.</p>
         <a href="#sobre" class="cta-btn">Saiba Mais</a>
       </div>
     </div>
@@ -33,10 +33,8 @@
   <section id="sobre" class="section-about">
     <div class="container">
       <h2>O que é a profissão de TI?</h2>
-      <p>A profissão de Tecnologia da Informação (TI) engloba uma variedade de funções relacionadas ao uso de computadores,
-        software, redes e dados para resolver problemas e melhorar a eficiência das organizações. Os profissionais de TI são
-        responsáveis por desenvolver, implementar, gerenciar e manter sistemas e soluções tecnológicas essenciais para o
-        funcionamento de empresas e instituições.</p>
+      <p>A profissão de Tecnologia da Informação (TI) abrange várias áreas da computação, redes, software e sistemas
+        que são fundamentais para a modernização e inovação nas empresas.</p>
       <div class="image-container">
         <img src="https://via.placeholder.com/800x400.png?text=Profissional+de+TI" alt="Profissional de TI">
       </div>
@@ -45,14 +43,14 @@
 
   <section id="salario" class="section-salary">
     <div class="container">
-      <h2>Média Salarial na área de TI</h2>
-      <p>A média salarial de um profissional de TI varia dependendo da sua especialização, experiência e local de trabalho.
-        Aqui estão algumas informações sobre salários médios no Brasil:</p>
+      <h2>Média Salarial</h2>
+      <p>A média salarial pode variar muito dependendo da especialização, experiência e local de trabalho. Aqui estão
+        algumas médias:</p>
       <ul>
         <li>Desenvolvedor de Software: R$ 4.500 a R$ 9.000</li>
         <li>Analista de Sistemas: R$ 3.800 a R$ 7.000</li>
         <li>Administrador de Redes: R$ 3.000 a R$ 6.000</li>
-        <li>Especialista em Segurança da Informação: R$ 6.000 a R$ 12.000</li>
+        <li>Especialista em Segurança: R$ 6.000 a R$ 12.000</li>
         <li>Arquiteto de Soluções: R$ 10.000 a R$ 18.000</li>
       </ul>
       <div class="image-container">
@@ -63,14 +61,13 @@
 
   <section id="enem" class="section-enem">
     <div class="container">
-      <h2>Nota de Corte do ENEM para Cursos de TI</h2>
-      <p>A nota de corte do ENEM varia de acordo com a universidade e o curso. Para entrar em cursos de Tecnologia da
-        Informação e áreas relacionadas, a média de corte gira em torno de:</p>
+      <h2>Nota de Corte ENEM</h2>
+      <p>A nota de corte varia dependendo do curso e da instituição. Para cursos de TI, a média é:</p>
       <ul>
         <li>Ciência da Computação: 700 a 800 pontos</li>
         <li>Engenharia de Computação: 750 a 850 pontos</li>
-        <li>Redes de Computadores: 650 a 700 pontos</li>
         <li>Sistemas de Informação: 600 a 750 pontos</li>
+        <li>Redes de Computadores: 650 a 700 pontos</li>
       </ul>
       <div class="image-container">
         <img src="https://via.placeholder.com/800x400.png?text=Nota+de+Corte+ENEM" alt="Nota de Corte ENEM">
@@ -81,7 +78,7 @@
   <section id="contato" class="section-contact">
     <div class="container">
       <h2>Entre em Contato</h2>
-      <p>Tem alguma dúvida ou quer saber mais sobre a profissão de TI? Entre em contato conosco!</p>
+      <p>Quer saber mais? Envie-nos uma mensagem e tire suas dúvidas sobre a carreira de TI!</p>
       <form action="#" method="POST">
         <input type="text" placeholder="Seu nome" required>
         <input type="email" placeholder="Seu e-mail" required>
