--- a/index.html
+++ b/index.html
@@ -3,99 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carreira TI - O Futuro é Agora</title>
+    <title>Carreira Tech 2026</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <nav>
-        <div class="container nav-content">
-            <div class="logo">TI<span>MASTER</span></div>
-            <div class="menu">
-                <a href="#sobre">Início</a>
-                <a href="#salarios">Salários</a>
-                <a href="#enem">ENEM</a>
-            </div>
-            <button class="btn-aluno">Área do Aluno</button>
-        </div>
-    </nav>
-
-    <header class="hero">
-        <div class="container hero-grid">
-            <div class="hero-text">
-                <span class="badge">Carreira do Futuro</span>
-                <h1>Transforme o mundo através da <span>Tecnologia</span></h1>
-                <p>O mercado de TI não para de crescer. Descubra como ingressar na profissão que une inovação, altos salários e flexibilidade.</p>
-                <div class="hero-btns">
-                    <button class="btn-primary">Conhecer Cursos</button>
-                    <button class="btn-secondary">Falar com Consultor</button>
-                </div>
-            </div>
-            <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1573496130141-2097af0139a2?auto=format&fit=crop&w=600&q=80" alt="Profissional de TI">
-            </div>
-        </div>
+    <header>
+        <h1>Guia de Carreira: Tecnologia</h1>
+        <p>Tudo o que você precisa saber para começar.</p>
     </header>
 
-    <section id="salarios" class="container">
-        <h2 class="section-title">Média Salarial 2026</h2>
-        <div class="cards-grid">
-            <div class="card">
-                <h3>Júnior</h3>
-                <p class="price">R$ 4.500</p>
-                <span>Média inicial</span>
-            </div>
-            <div class="card highlight">
-                <h3>Pleno</h3>
-                <p class="price">R$ 9.200</p>
-                <span>Profissional focado</span>
-            </div>
-            <div class="card">
-                <h3>Sênior</h3>
-                <p class="price">R$ 16.000+</p>
-                <span>Líder técnico</span>
-            </div>
-        </div>
-    </section>
+    <main>
+        <section id="enem">
+            <h2>Nota do ENEM</h2>
+            <p>Para cursar Ciência da Computação ou Engenharia de Software em universidades públicas, a nota de corte costuma variar entre <strong>720 e 800 pontos</strong>.</p>
+        </section>
 
-    <section id="enem" class="bg-dark">
-        <div class="container">
-            <h2 class="section-title white">Acesso via ENEM</h2>
-            <div class="table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Curso</th>
-                            <th>Média de Corte</th>
-                            <th>Dificuldade</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Ciência da Computação</td>
-                            <td>785.50 pts</td>
-                            <td><span class="tag-high">Alta</span></td>
-                        </tr>
-                        <tr>
-                            <td>Engenharia de Software</td>
-                            <td>760.20 pts</td>
-                            <td><span class="tag-med">Média</span></td>
-                        </tr>
-                        <tr>
-                            <td>Análise de Sistemas</td>
-                            <td>690.15 pts</td>
-                            <td><span class="tag-low">Acessível</span></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <section id="salarios">
+            <h2>Salários e Benefícios</h2>
+            <table>
+                <tr>
+                    <th>Nível</th>
+                    <th>Média Salarial</th>
+                </tr>
+                <tr>
+                    <td>Estagiário</td>
+                    <td>R$ 1.500 - R$ 2.500</td>
+                </tr>
+                <tr>
+                    <td>Júnior</td>
+                    <td>R$ 4.000 - R$ 6.500</td>
+                </tr>
+                <tr>
+                    <td>Pleno/Sênior</td>
+                    <td>R$ 9.000 - R$ 20.000+</td>
+                </tr>
+            </table>
+            <p><strong>Benefícios comuns:</strong> Trabalho remoto (Home Office), auxílio equipamento, bônus por performance e plano de saúde internacional.</p>
+        </section>
+
+        <section id="aprendizado">
+            <h2>Começando com HTML & CSS</h2>
+            <p>HTML é a estrutura do seu site, enquanto o CSS é a beleza e o estilo.</p>
+            <div class="code-box">
+                <code>&lt;button&gt;Clique Aqui&lt;/button&gt;</code>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2026 TIMASTER - Todos os direitos reservados.</p>
+        <p>&copy; 2026 - Guia de TI para Estudantes</p>
     </footer>
-
 </body>
 </html>
